@@ -1,3 +1,10 @@
+2007-04-26  Benoît Dejean  <benoit@placenet.org>
+
+	* src/memmaps.cpp:
+	
+	Display device name instead of major/minor.
+	Reverted one string "MemoryMaps" to "Memory Maps".
+
 2007-04-25  Benoît Dejean  <benoit@placenet.org>
 
 	* src/memmaps.cpp:
